[gd_scene load_steps=5 format=3 uid="uid://d3yh57upxarwk"]

[ext_resource type="Script" uid="uid://c115lfjudqls5" path="res://scenes2d/levels2d/level_1_transition.gd" id="1_oaunr"]
[ext_resource type="AudioStream" uid="uid://c7l1b7lhjd04l" path="res://audio/pianoHits/FranticHeavy.ogg" id="2_oaunr"]
[ext_resource type="AudioStream" uid="uid://co66rexru10yy" path="res://audio/EnemyChaseFull.ogg" id="3_hm14h"]
[ext_resource type="Texture2D" uid="uid://cqhkaqomdof62" path="res://images/enemy.png" id="3_qendl"]

[node name="Jumpscare" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_oaunr")

[node name="JumpscareNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_oaunr")
volume_db = 6.357
autoplay = true

[node name="JumpscareNoise2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hm14h")
volume_db = -1.155
pitch_scale = 1.14
autoplay = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(12, 8)
color = Color(0, 0, 0, 1)

[node name="JumpscarePlaceholder" type="Sprite2D" parent="."]
position = Vector2(317, 240)
scale = Vector2(0.589178, 0.58175)
texture = ExtResource("3_qendl")

[node name="ScareTime" type="Timer" parent="."]
wait_time = 0.132
one_shot = true

[connection signal="timeout" from="ScareTime" to="." method="_scene_swap"]
